--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,25 @@
 body {
     margin: 0;
+    margin-bottom: 10vh;
     padding: 0;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f2f2f2;
+    font-family: "Helvetica", "sans-serif";
 }
 
 #tip-container {
-    width: 30%;
-    height: 50%;
-    margin: auto;
+    width: 32%;
+    height: 38vh;
+    margin-bottom: 20%;
+    background-color: white;
+    border-radius: 12px;
+    box-shadow: 0px 1px 10px 1px #b5b5b5;
+}
+
+h1 {
+    font-size: 3.5vh;
+    text-align: center;
 }
