--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,52 @@ body {
     align-items: center;
     background-color: #f2f2f2;
     font-family: "Helvetica", "sans-serif";
+    font-size: 16px;
 }
 
 #tip-container {
-    width: 32%;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    width: 30%;
     height: 38vh;
     margin-bottom: 20%;
     background-color: white;
     border-radius: 12px;
     box-shadow: 0px 1px 10px 1px #b5b5b5;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 h1 {
     font-size: 3.5vh;
-    text-align: center;
     font-weight: bold;
+    flex: .5;
+    text-align: center;
+}
+
+label{
+    display: block;
+    width: 80%;
+    text-align: left;
+    flex: 1;
+}
+
+input{
+    flex: 1;
+}
+
+button{
+    display: block;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    font-size: 22px;
+    font-family: arial;
+    flex: 1;
+    margin-top: 10px;
+}
+
+p {
+    flex: .5;
 }
